 o Updated SanityTest and UpdateTest to test the new features implemented in
   CursorResultSet.

02/09/2004 - Brian Heineman
 o Implemented ResultSet.updateAsciiStream().
 o Implemented ResultSet.updateBinaryStream().
 o Implemented ResultSet.updateBlob().
 o Implemented ResultSet.updateCharacterStream().
 o Implemented ResultSet.updateClob().

02/08/2004 - Brian Heineman
 o Improved parsing of callable statements to be case-insensitive, allow
   whitespace between '?=' and support calls of stored procedures when no
   "exec" is specified.
 o Updated DatabaseMetaData.supportsGetGeneratedKeys() to return true.
 o Implemented DatabaseMetaData.supportsSavepoints().

02/07/2004 - Brian Heineman
 o Moved TdsStatement.releaseTds() calls into try {} finally {} statements to
   ensure connections are released back into internal pool even if an exception
   is thrown.

02/06/2004 - Brian Heineman
 o Applied patch [884180] Implement getGeneratedKeys() (thanks to Mike 
   Hutchinson for the patch)
 o Corrected Blob and Clob threading issues that could have occured when
   streams were flushed.

02/05/2004 - Alin Sinpalean
 o Added the "lastUpdateCount" parameter to the URL and DataSource properties.
   If set to true, only the last update count is returned by executeUpdate(),
   as to avoid update counts returned by triggers being mistaken for the actual
   update count for PreparedStatements.
 o Reformatted code in Tds.java, CallableStatement_base.java.
 o Fixed an issue with update count handling when lastUpdateCount was false.
 o Fixed bug [729370], caused by BigDecimals with the scale greater than their
   precision (which is technically possible, but not supported by SQL Server).
 o Fixed some issues with Long and BigDecimal precision and scale handling,
   including using the correct precision for DECIMAL/NUMERIC fields, as
   supported by the server (either 28 or 38 decimals).
 o Added the "charset" parameter to the DataSource (it worked before, but only